# arrakis

./: Cargo.toml  LICENSE  README.md  index.html
assets/: manifest.json
src/: README.md  main.rs  parameters.rs
src/app/: app.rs  mod.rs  state.rs
src/components/: logger.rs  mod.rs  project.rs  settings.rs
src/models/: banner.rs  details.rs  initial.rs  mod.rs
