[package]
name = "arrakis"
version = "0.1.0"
authors = ["James Bon <atlantix-eda@proton.me>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.83"
publish = false

[dependencies]
egui = "0.28.0"
eframe = { version = "0.28.0", features = ["default", "__screenshot"] }
egui_extras = { version = "0.28.0", features = ["all_loaders"] }
env_logger = { version = "0.11.3", default-features = false, features = [
  "auto-color",
  "humantime",
] }
image = { version = "0.25.1", default-features = false, features = [
  "jpeg",
  "png",
] }
log = "0.4.21"
sysinfo = "0.31.4"
local-ip-address = "0.6.1"
csv = "1.3.0"
egui-aesthetix = { version = "0.2.4", features = ["all_themes"] }
prettytable = "0.10.0"
egui-file-dialog = "0.6.1"
chrono = {version = "0.4.38"}
regex = "1.10.4"
logos = "0.14.0"
serialport = {version="4.6.1", features=["libudev", "usbportinfo-interface"]}
tokio = {version="1.42.0", features = ["full"]}
#clap = "4.5.4"



[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
